--- a/src/styles/tables.scss
+++ b/src/styles/tables.scss
@@ -47,3 +47,25 @@ thead {
 .start-date-column, .finish-date-column{
     width: 8%;
 }
+
+.cv-column{
+    width: 10%;
+}
+.cv-cell{
+    text-align: center;
+}
+
+.name-column {
+    width: 20%;
+}
+
+.first-last-name-column {
+    width: 20%;
+}
+
+.second-last-name-column {
+    width: 20%;
+}
+.date-column {
+    width: 20%;
+}
