Download job call file

--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -19,3 +19,16 @@
     background-color: #b7b8b9;
     border-color: #b7b8b9;
 }
+.get-word-file-button {
+    background-color: #0094FF;
+    border-radius: 8px;
+    color: #FFFFFF;
+    padding: 5px;
+    border-color: #0094FF;
+    width: 25%;
+    font-family: 'Nunito', sans-serif;
+   
+}
+.get-word-file-icon{
+  margin: 0px 5px;
+}
