--- a/src/styles/tables.scss
+++ b/src/styles/tables.scss
@@ -69,3 +69,23 @@ thead {
 .date-column {
     width: 20%;
 }
+
+.data_date{
+    width: 10%;
+}
+.language-column{
+    width: 15%;
+}
+.writing-column{
+    width: 10%;
+}
+.reading-column{
+    width: 10%;
+}
+.listening-column{
+    width: 10%;
+}
+
+.start-date-column, .finish-date-column{
+    width: 8%;
+}
