--- a/src/styles/accordion.scss
+++ b/src/styles/accordion.scss
@@ -9,7 +9,6 @@
     align-items: center;
     justify-content: space-between;
     padding: 10px 20px;
-    gap: 650px;
     border-top: rgb(166, 166, 166) solid 1px;
     border-bottom: rgb(166, 166, 166) solid 1px;
 }
@@ -26,6 +25,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.personal-data-content{
+    padding: 20px 0px;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
 }
 .arrow-icon{
     color: #000;
