Creating cv teacher info view

--- a/src/styles/accordion.scss
+++ b/src/styles/accordion.scss
@@ -25,6 +25,15 @@
     align-items: center;
     justify-content: center;
 }
+
+.content p {
+    font-size: 25px;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Inter', sans-serif;
+    color: #000;
+}
+
 .personal-data-content{
     padding: 20px 0px;
     margin: 0;
