Show teacher job call info at modal

--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -32,3 +32,28 @@
 .get-word-file-icon{
   margin: 0px 5px;
 }
+.xlsx-button {
+    background-color: #179B34;
+    border-radius: 8px;
+    color: #FFFFFF;
+    border-color: #179B34;
+    width: 15%;
+    font-family: 'Nunito', sans-serif;
+}
+.xlsx-button-modal {
+    background-color: #179B34;
+    border-radius: 8px;
+    color: #FFFFFF;
+    border-color: #179B34;
+    width: 15%;
+    font-family: 'Nunito', sans-serif;
+    justify-self: flex-start;
+    align-self: flex-start;
+}
+.excel-icon {
+    color: #fff;
+    width: 12px;
+    height: 18px;
+    margin-right: 5px;
+
+}
