Show candidate teaching start date

--- a/src/styles/accordion.scss
+++ b/src/styles/accordion.scss
@@ -42,6 +42,15 @@
     align-items: center;
     justify-content: flex-start;
 }
+.teaching-experience-content{
+    padding: 20px 0px;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+}
 .arrow-icon{
     color: #000;
     width: 40px;
