--- a/src/styles/inputs.scss
+++ b/src/styles/inputs.scss
@@ -28,3 +28,25 @@
 .form-input-container select {
     height: 30px;
 }
+.search-container{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    align-self: center;
+    width: 100%;
+ }
+ .search-container label{
+    font-family: 'Nunito';
+    font-size: 15px;
+    color: #000;
+    align-self: center;
+ 
+ }
+ .search-candidate-input{
+     width: 250px;
+     height: 25px;
+     border-radius: 5px;
+     border: #aaa solid 1px;
+     padding-left: 5px;
+    
+ }
