Removing cv file column

--- a/src/styles/accordion.scss
+++ b/src/styles/accordion.scss
@@ -33,7 +33,13 @@
     font-family: 'Inter', sans-serif;
     color: #000;
 }
-
+.teaching-experience-content p {
+    font-size: 25px;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Inter', sans-serif;
+    color: #000;
+}
 .personal-data-content{
     padding: 20px 0px;
     margin: 0;
