--- a/src/styles/accordion.scss
+++ b/src/styles/accordion.scss
@@ -47,6 +47,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
+    gap: 10px;
 }
 .teaching-experience-content{
     padding: 20px 0px;
